<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#79000000"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        android:paddingBottom="3dp">


        <LinearLayout
            android:id="@+id/firstpage_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/firstpage"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/firstpage" />

            <TextView
                android:id="@+id/firstpage_text"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/fptext"
                android:textColor="#7597B3" />



        </LinearLayout>






        <LinearLayout
            android:id="@+id/recommend_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/recommend"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/recommend" />

            <TextView
                android:id="@+id/recommend_text"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rctext"
                android:textColor="#7597B3" />



        </LinearLayout>





        <LinearLayout
            android:id="@+id/user_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/userpage"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/user_text"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ustext"
                android:textColor="#7597B3" />



        </LinearLayout>


    </LinearLayout>

</LinearLayout>

