<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user_title_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="座位选择"
            android:background="#0080FF"
            android:textColor="#fff"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2894FF"
                android:text="@string/seattable"
                android:textSize="22sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选定总价:"
                    android:textSize="22sp"
                    android:textColor="#fa1523"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/orderprice"
                    android:textSize="22sp"
                    android:text="0.0元"
                    android:textColor="#fa1523"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#80FFFF" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/seats"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/screen"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/screen"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="选定座位:"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orderseatposition"
                android:text=""
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom">
            <Button
                android:id="@+id/seatbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderseat"
                android:textSize="25sp"
                android:textColor="#2894FF"/>
        </LinearLayout>


</LinearLayout>
